Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4781

lustre-rsync-test test_2b: Replication of operation failed(-17)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • Lustre 2.6.0, Lustre 2.5.3, Lustre 2.9.0
    • None
    • 3
    • 13146

      This issue was created by maloo for Andreas Dilger <andreas.dilger@intel.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/7edd3618-90d0-11e3-91ee-52540035b04c.

      The sub-test test_2b failed with the following error in the test output:

      Replication of operation failed(-17): 4274 CREAT (1) [0x400000400:0x7f4:0x0] [0x400000400:0x7f3:0x0] SMALL.FIL
      Replication of operation failed(-17): 4275 CREAT (1) [0x400000400:0x7f5:0x0] [0x400000400:0x7ef:0x0] LARGE.FIL
      Replication of operation failed(-17): 4276 CREAT (1) [0x400000400:0x7f6:0x0] [0x400000400:0x7f3:0x0] MEDIUM.FIL
      Replication of operation failed(-17): 4277 CREAT (1) [0x400000400:0x7f7:0x0] [0x400000400:0x7f3:0x0] LARGE.FIL

      Info required for matching: lustre-rsync-test 2b

            jhammond John Hammond
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved: