LU-4781 utils: handle EEXIST in lustre_rsync

In lustre_rsync if the file to be created in the target already exist
then handle this rather than returning an error.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I8c04c80cf8618b3681be12d098be0f07a305df30
Reviewed-on: http://review.whamcloud.com/20649
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Li Xi <lixi@ddn.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>